--- a/samples/ImageCard-MostLikedPages/package.json
+++ b/samples/ImageCard-MostLikedPages/package.json
@@ -1,9 +1,9 @@
 {
   "name": "image-card-most-liked-pages",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "engines": {
-    "node": ">=16.13.0 <17.0.0"
+    "node": ">=16.13.0 <17.0.0 || >=18.17.1 <19.0.0"
   },
   "main": "lib/index.js",
   "scripts": {
@@ -12,22 +12,24 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/sp-adaptive-card-extension-base": "1.16.1",
-    "@microsoft/sp-core-library": "1.16.1",
-    "@microsoft/sp-property-pane": "1.16.1",
-    "@pnp/spfx-property-controls": "^3.13.0-beta.4403155",
+    "@microsoft/sp-adaptive-card-extension-base": "1.18.2",
+    "@microsoft/sp-core-library": "1.18.2",
+    "@microsoft/sp-property-pane": "1.18.2",
+    "@pnp/spfx-property-controls": "^3.16.0",
     "tslib": "2.3.1"
   },
   "devDependencies": {
-    "@microsoft/eslint-config-spfx": "1.16.1",
-    "@microsoft/eslint-plugin-spfx": "1.16.1",
+    "@microsoft/eslint-config-spfx": "1.18.2",
+    "@microsoft/eslint-plugin-spfx": "1.18.2",
     "@microsoft/rush-stack-compiler-4.5": "0.2.2",
-    "@microsoft/sp-build-web": "1.16.1",
-    "@microsoft/sp-module-interfaces": "1.16.1",
+    "@microsoft/rush-stack-compiler-4.7": "0.1.0",
+    "@microsoft/sp-build-web": "1.18.2",
+    "@microsoft/sp-module-interfaces": "1.18.2",
     "@rushstack/eslint-config": "2.5.1",
     "@types/webpack-env": "~1.15.2",
     "ajv": "^6.12.5",
+    "eslint": "8.7.0",
     "gulp": "4.0.2",
-    "typescript": "4.5.5"
+    "typescript": "4.7.4"
   }
 }
